[package]
name = "imxrt-rs-1170evkb-led-toggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
imxrt-hal = { version = "0.5.4", features = ["imxrt1170"] }
imxrt-ral = { version = "0.5.3", features = ["imxrt1176_cm7", "rt"] }
imxrt-rt = { version = "0.1.3", features = ["device"] }
imxrt1170evk-fcb = "0.1.0"
panic-halt = "0.2.0"
rtt-target = "0.4.0"

[build-dependencies]
imxrt-rt = { version = "0.1.3", features = ["device"] }
